Finish converting easy left/right sections from React JSX to Markdown. Content is under each page dir in '_content/_*.md'.  Using new MarkdownBody and MarkdownMedia helper components. Fix spacing, css, etc. The following numenta.com easy pages are done: * Main/Top, Nutshell, Neuro Research, OS Community, MI Technology,   Anom Detection Benchmark.

--- a/packages/components/src/MarkdownBody/index.css
+++ b/packages/components/src/MarkdownBody/index.css
@@ -4,8 +4,13 @@
  * Copyright © 2005—2017 Numenta <http://numenta.com>
  */
 
+._dropcap > div > p:first-of-type {
+  margin-top: 0;
+  padding-top: 0;
+}
+
 /* dropcap - sync with wrappers/md/md.css */
-._dropcap p:first-of-type::first-letter {
+._dropcap > div > p:first-of-type::first-letter {
   background-color: #fff;
   color: #1aa0db;
   float: left;
@@ -17,7 +22,7 @@
   padding: 0.5rem 0.3rem 0.3rem 0;
 }
 @media screen and (min-width: 48em) {
-  ._dropcap p:first-of-type::first-letter {
+  ._dropcap > div > p:first-of-type::first-letter {
     /* -ns (> mobile) */
     font-size: 5.4rem;
     padding: 0.4rem 0.3rem 0.3rem 0;
